# openwrt-management-tool

./: Cargo.toml  README.md
src/: commands.rs  config.rs  lib.rs  openwrt_vars.rs  os_common.rs  subprocess.rs
src/commands/: build_image.rs  create_backup.rs  install_build_requirements.rs  install_image.rs  restore_backup.rs  upgrade_packages.rs  wifi.rs
