[package]
name = "openwrt-management-tool"
version = "0.1.0"
authors = ["Wade Berrier <wberrier@gmail.com>"]
edition = "2018"
license = "GPL"
description = "Tool to help automate openwrt management"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
anyhow = "1.0"
os_info = "3"
run_script = "0"
